test/conformance/chainsaw/validating-policies/context/resource/post/chainsaw-step-03-apply-1.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: ns-deleter
rules:
- apiGroups:
  - ""
  resources:
  - namespaces
  verbs:
  - delete
