test/conformance/chainsaw/validating-policies/context/resource/post/chainsaw-step-03-apply-2.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: cm-creator
rules:
- apiGroups:
  - ""
  resources:
  - configmaps
  verbs:
  - create
