test/conformance/chainsaw/validating-policies/context/resource/post/chainsaw-step-03-apply-3.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: ns-deleter:subreviewuser
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: ns-deleter
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: User
  name: subreviewuser
