test/conformance/chainsaw/validating-policies/context/resource/post/chainsaw-step-03-apply-5.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: cm-creator:badsubreviewuser
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: cm-creator
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: User
  name: badsubreviewuser
