test/conformance/chainsaw/validating-policies/context/resource/post/cm-one.yaml
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  name: cm01
  namespace: subreview-ns
