test/conformance/chainsaw/validating-policies/context/resource/post/cm-two.yaml
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  name: cm02
  namespace: subreview-ns
