test/conformance/chainsaw/validating-policies/context/resource/post/chainsaw-step-01-assert-1.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: check-subjectaccessreview
status:
  conditionStatus:
    ready: true
